# cbtn-flask-tutorial

./: advanced-tree-algorithms.py  main.py  pyproject.toml  query-params.py  requirements.txt
combine-js-and-flask/: server.py
combine-js-and-flask/templates/: back-end-only.html  front-and-back-end.html
cookies-based-shopping-cart/: server.py
cookies-based-shopping-cart/templates/: products.html  shopping-cart.html
flask-basics/: before-and-after.py  cookies.py  errors.py  hello-world.py  query-params.py  request-methods.py  returning-data.py  url-params.py
mongodb-basics/: database-stuff.py
rest-api-example/: server.py
simple-blog/: server.py
simple-blog/templates/: about.html  article.html  articles-list.html  base.html  home.html  nav-bar.html
templates/: article.html
tic-tac-toe-api/: server.py
todo-list-example/: server.py
todo-list-example/templates/: todo-list-page-jinja.html  todo-list-page.html
