[project]
name = "cbtn-flask-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black==25.1.0",
    "blinker==1.9.0",
    "click==8.2.1",
    "dnspython==2.7.0",
    "flask==3.1.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pymongo==4.14.1",
    "tomli==2.2.1",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.47",
]
